--- a/exercises/Exercise1-1_Variables.ipynb
+++ b/exercises/Exercise1-1_Variables.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,15 +157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Do some math.\n",
+    "x = 1\n",
+    "y = 1\n",
+    "c = 12\n",
+    "a = 4\n",
+    "u = 5\n",
     "t = x + y\n",
+    "print(t)\n",
+    "\n",
     "u = c / 7.1\n",
     "v = a - u * (c + u)\n",
-    "w = c % 2"
+    "w = c % 2\n",
+    "\n"
    ]
   },
   {
@@ -194,10 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
+    "b = 4\n",
+    "w = 12\n",
+    "y = 9\n",
     "print( b >= w )\n",
     "print( 87 < -2 )\n",
     "print( c != 0 )\n",
@@ -221,10 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "12.21\n",
     "type(v)"
    ]
   },
@@ -259,9 +301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print( float(y) )\n",
     "print( int(c) )"
@@ -282,9 +333,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print( round(c) )\n",
     "print( round(c,3) )"
@@ -303,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +383,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.385164807134504\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print( abs(d) )\n",
     "print( abs(-12) )"
@@ -382,18 +451,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here. \n",
-    "\n",
-    "# Note: Before you start coding, \n",
-    "#       use comments to work out the problem step-by-step...\n",
-    "\n",
+    "sig = 5.67 * (10^-8)\n",
+    "radius = 6.957 * (10^5)\n",
+    "temp = 5778\n",
+    "distance = 1.5 * (10^8)\n",
+    "albedo = 0.3\n",
+    "emissivity = 1.0\n",
+    "pi = 3.14\n",
     "\n",
     "# Step 1: Determine G_s\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Step 2: ..."
+    "G_s = \n",
+    "\n"
    ]
   },
   {
@@ -456,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,9 +565,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ISAAC NEWTON\n",
+      "Isaac newton\n"
+     ]
+    }
+   ],
    "source": [
     "print( s.upper() )\n",
     "print( s.capitalize() )"
@@ -518,18 +596,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEAGAN BROWN\n",
+      "Meagan brown\n"
+     ]
+    }
+   ],
    "source": [
     "# Define variables\n",
-    "\n",
+    "first_name = 'Meagan'\n",
+    "last_name = 'Brown'\n",
     "# Combine in a single string.\n",
-    "\n",
+    "my_name = 'Meagan' + ' ' + 'Brown'\n",
     "# Capitalize the first letter\n",
-    "\n",
+    "print(my_name.upper())\n",
     "# Capitalize the entire string.\n",
-    "\n",
+    "print(my_name.capitalize())\n",
     "# Print outputs.\n"
    ]
   },
@@ -556,9 +644,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I live in Santa Barbara.\n",
+      "I have lived in Santa Barbara for 3 years.\n"
+     ]
+    }
+   ],
    "source": [
     "city = 'Santa Barbara'\n",
     "yrs = 3\n",
@@ -578,14 +675,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m sentence \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMy name...\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Print\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m( \u001b[43msentence\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+     ]
+    }
+   ],
    "source": [
     "# Define the variable info.\n",
     "info = (first, age)\n",
     "# Complete the sentence to be printed\n",
-    "sentence = \"My name...\"\n",
+    "sentence = \"My name is...\"\n",
     "# Print\n",
     "print( sentence % info)"
    ]
@@ -603,9 +712,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square root of pi is 1.772454.\n",
+      "The square root of pi is 1.77.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "pi_sqrt = math.sqrt(math.pi)\n",
@@ -660,7 +778,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Month of birth (1-12):  8\n"
+     ]
+    }
+   ],
    "source": [
     "month_in = input('Month of birth (1-12): ')\n",
     "type(month_in)"
@@ -699,11 +825,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "cell.metadata.hide_input": "True"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    div.run { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.example { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.practice { \n",
+       "        border: 0.5px solid #008C96;  \n",
+       "        padding: 10px;  \n",
+       "        background-color: #b2dcdf;  \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.python { \n",
+       "        border: 0.5px solid #408000; \n",
+       "        padding: 10px; \n",
+       "        background-color: #cddfb4; \n",
+       "        color:#2c5900; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.data { \n",
+       "        border: 0.5px solid #443823; \n",
+       "        padding: 10px; \n",
+       "        background-color: #ead8b9; \n",
+       "        color:#443823; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.codeblock { \n",
+       "        border: 0.2px solid #808080;\n",
+       "        padding: 10px; \n",
+       "        background-color: #DBDBDB; \n",
+       "        margin-top: 2px\n",
+       "    }   \n",
+       "    div.boxhead1 { \n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext1 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 12pt; \n",
+       "        color:#006269 \n",
+       "    }\n",
+       "    div.boxhead2 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        background-color: #c7dea6; \n",
+       "        color:#486d15; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext2 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        padding: 12pt; \n",
+       "        color:#486d15\n",
+       "    }\n",
+       "    div.boxhead3 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        background-color: #f7d1b2; \n",
+       "        color:#cd5c00; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext3 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        padding: 12pt; \n",
+       "        color:#cd5c00\n",
+       "    }\n",
+       "    span.code {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: normal;\n",
+       "    }\n",
+       "    span.codeb {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    ol.num {\n",
+       "        margin: 0pt;\n",
+       "        margin-top: 12pt; \n",
+       "        margin-bottom: 2pt; \n",
+       "        margin-left: 4pt; \n",
+       "        padding-bottom: 4pt; \n",
+       "    }\n",
+       "    ol.alpha {\n",
+       "        list-style-type: lower-alpha;\n",
+       "        margin: 0pt;\n",
+       "        margin-left: 4pt;\n",
+       "        margin-top: 2pt;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    ul.a {\n",
+       "        list-style-type: none; \n",
+       "        margin-left: -20pt;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "\n",
+       "    ul.b {\n",
+       "        list-style-type: square; \n",
+       "        font-weight: normal; \n",
+       "        margin-left: 20pt; \n",
+       "        margin-top: 4pt; \n",
+       "        padding-bottom: 12pt;\n",
+       "    }\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# IGNORE THIS CELL\n",
     "from IPython.core.display import HTML\n",
