--- a/exercises/Exercise1-3_ControlFlowStatements.ipynb
+++ b/exercises/Exercise1-3_ControlFlowStatements.ipynb
@@ -146,10 +146,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the temperature? 20\n",
+      "What are the units (C or F)? C\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.0 Fahrenheit\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_value = input(\"What is the temperature?\")\n",
+    "units = input(\"What are the units (C or F)?\")\n",
+    "\n",
+    "if units == (\"F\"):\n",
+    "    print((float(temp_value) - 32) * (5/9), \"Celsius\")\n",
+    "    \n",
+    "if units == (\"C\"):\n",
+    "    print((float(temp_value) * (9/5) + 32), \"Fahrenheit\")\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,9 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valine is an essential, non-aromatic amino acid.\n"
+     ]
+    }
+   ],
    "source": [
     "essential = ['histidine', 'lysine', 'threonine', 'tryptophan', \n",
     "             'valine', 'methionine', 'leucine', 'phenylalanine']\n",
@@ -288,10 +323,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the temperature? 40\n",
+      "What are the units (C or F)? C\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The temperature is 40.0 °C/F.It is (not) below freezing.\n",
+      "The temperature is 40.0 °C/F.It is below freezing.\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_value = input(\"What is the temperature?\")\n",
+    "units = input(\"What are the units (C or F)?\")\n",
+    "\n",
+    "if float(temp_value) > 0 and units == \"C\":\n",
+    "    print(\"The temperature is\", float(temp_value), \"°C/F.\" \"It is (not) below freezing.\")\n",
+    "else:\n",
+    "    print(\"The temperature is\", float(temp_value), \"°C/F. \" \"It is below freezing.\")\n",
+    "    \n",
+    "\n",
+    "if float(temp_value) > 32 and units == \"F\":\n",
+    "    print(\"The temperature is\", float(temp_value), \"°C/F.\" \"It is (not) below freezing.\")\n",
+    "else:\n",
+    "    print(\"The temperature is\", float(temp_value), \"°C/F.\" \"It is below freezing.\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -370,13 +437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carbon\n",
+      "hydrogen\n",
+      "nitrogen\n",
+      "oxygen\n",
+      "phosphorus\n",
+      "sulfur\n"
+     ]
+    }
+   ],
    "source": [
     "# Define org_elements\n",
-    "\n",
-    "# Print each element in org_elements\n"
+    "org_elements = ['carbon', 'hydrogen', 'nitrogen', 'oxygen', 'phosphorus', 'sulfur']\n",
+    "# Print each element in org_elements\n",
+    "for i in org_elements:\n",
+    "    print(i)"
    ]
   },
   {
@@ -408,14 +490,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'c')\n"
+     ]
+    }
+   ],
    "source": [
     "# Define list of atomic masses of 6 most abundant elements\n",
     "atomic_mass = [12.011, 1.00784, 14.0067, 15.999, 30.97376, 32.065]  # g/mol\n",
     "\n",
-    "# Iterate through org_elements + print the atomic mass of each element\n"
+    "# Iterate through org_elements + print the atomic mass of each element\n",
+    "#for i,org in enumerate(org_elements):\n",
+    "    #mass = atomic_mass\n",
+    "    #print('The atmoic mass of %s is %d.' %(org, mass))\n",
+    "    \n",
+    "#for stuff in enumerate(org_elements):\n",
+    "    #index, element = stuff\n",
+    "    #print(f\"({index}, '{element}')\")\n",
+    "    \n",
+    "for index, element in enumerate(org_elements):\n",
+    "    print(f\"({index}),"
    ]
   },
   {
